# LocalTranslateEnEs

./: .gitattributes  ctranslate2cmake.sh  translatorcmake.sh
ctranslate2-install/lib/: libctranslate2.4.6.0.dylib  libctranslate2.4.dylib  libctranslate2.dylib
ctranslate2-install/lib/cmake/ctranslate2/: ctranslate2Targets-release.cmake  ctranslate2Targets.cmake
translator/: CMakeLists.txt
translator/models/ct2-es-en-quant/: shared_vocabulary.json
translator/src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
